<resources>
    <string name="app_name">Rental Homes</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="progress_uploading">Uploading</string>
    <string name="upload_success">Upload completed</string>
    <string name="upload_failure">Upload failed</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password_with_question_mark">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_login_with">or Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="australia_phone_country_code">+91</string>
    <string name="phone_hint">0000 000 000</string>
    <string name="agree_to_sign_in">You agree to allow sign in to check your information</string>
    <string name="please_wait">Please Wait…</string>
    <string name="logout">Logout</string>
    <string name="msg_empty_pin_code">Please enter postal code.</string>
    <string name="msg_pin_code_length">Please enter at least 6 characters for Postal code.</string>
    <string name="dollar_sign">₹</string>
    <string name="msg_empty_agency_name">Enter an agency name.</string>
    <string name="msg_empty_suburb">Enter an suburb.</string>
    <string name="msg_suburb_length">Enter at least 2 characters for suburb.</string>
    <string name="msg_empty_email">Enter an email.</string>
    <string name="msg_empty_mobile">Enter mobile number.</string>
    <string name="msg_invalid_email">Enter valid email.</string>
    <string name="msg_empty_password">Enter password.</string>
    <string name="msg_password_length">Password needs to be a minimum of 6 characters.</string>
    <string name="msg_invalid_password">Password must contain at least one uppercase, lowercase, numeric value,special character and should not be less than 8 characters.</string>
    <string name="msg_password_not_contain_emoji">Password can\'t contain emojis.</string>
    <string name="msg_address_not_contain_emoji">Address can\'t contain emojis.</string>
    <string name="msg_empty_phone">Enter Phone Number.</string>
    <string name="msg_phone_length_min_10_digits">Phone number requires 9 digits</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="tell_us_your_name">Enter your name</string>
    <string name="tell_us_your_agency_name">Enter your agency name</string>
    <string name="btn_continue">Continue</string>
    <string name="terms_and_conditions">I have read and agree to the <b>Terms &amp; Conditions</b> &amp; <b>Privacy Policy</b></string>
    <string name="finishing_up">Finishing Up</string>
    <string name="fill_password">Enter your password</string>
    <string name="msg_empty_first_name">Enter first name.</string>
    <string name="msg_empty_last_name">Enter last name.</string>
    <string name="msg_empty_promo">Enter promo code.</string>
    <string name="msg_first_name_length">Enter at least 2 characters for first name.</string>
    <string name="msg_last_name_length">Enter at least 2 characters for last name.</string>
    <string name="msg_promo_length">Enter at least 6 characters for promo code.</string>
    <string name="msg_agency_name_length">Enter at least 2 characters for agency name.</string>
    <string name="msg_empty_confirm_password">Enter Confirm password.</string>
    <string name="msg_password_confirm_pass_not_match">Password and Confirm password does not match.</string>
    <string name="msg_checkbox_unchecked">Please read our privacy policy and accept our terms &amp; conditions.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="give_us_your_email">Enter your email</string>
    <string name="use_gallery">Open Gallery</string>
    <string name="txt_agent">Agent</string>
    <string name="txt_buyer">Buyer</string>
    <string name="agency_name">Agency Name</string>
    <string name="tell_us_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="promo_code_title">Finishing Up, Enter your promo code</string>
    <string name="promo_code">Promo Code</string>
    <string name="my_listings">My Listings</string>
    <string name="demo_address">136/416 St Kilda Road</string>
    <string name="demo_city">Melbourne, VIC 3004</string>
    <string name="demo_meters">802 m<small><sup>2</sup></small></string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer.</string>
    <string name="lorem_ipsum_short">Lorem Ipsum is simply dummy text of the printing and typesetting</string>
    <string name="profile">Profile</string>
    <string name="user_name_dummy">John Agent</string>
    <string name="buyer_name_dummy">John Buyer</string>
    <string name="agency_name_dummy">Ray White Bulimba</string>
    <string name="email_dummy">johnagent@gmail.com</string>
    <string name="mobile_dummy">+61 421 555 888</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="browse"><u>Browse</u></string>
    <string name="capture"><u>Capture</u></string>
    <string name="save">Save</string>
    <string name="or">or</string>
    <string name="toast_image_intent_null">Image Intent Null</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_message_dummy">Dear Agents. Warm greetings from the Propare team. We hope that your experience has been a fantastic experience so far. We’d love to hear from you</string>
    <string name="add_non_listed_property">Add Non-Listed Property</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="tap_to_change_the_photo">Tap to change the photo</string>
    <string name="address">Address</string>
    <string name="land_size">Land Size</string>
    <string name="bed">Bed</string>
    <string name="bath">Bath</string>
    <string name="car">Car</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="description">Description</string>
    <string name="agent_information">Agent Information</string>
    <string name="phone">Phone</string>
    <string name="meters">sq.ft</string>
    <string name="msg_empty_address">Please enter an address.</string>
    <string name="msg_length_address">Please enter at least 2 characters for address.</string>
    <string name="msg_empty_land_size">Please enter land size.</string>
    <string name="msg_empty_description">Please enter description.</string>
    <string name="msg_length_description">Please enter at least 4 characters for description.</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions_setting">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="affiliations">Affiliations</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="change_email_and_password">Change Email &amp; Password</string>
    <string name="password">Password</string>
    <string name="share">Share</string>
    <string name="share_message">Hello, friends Welcome to Rental Homes. Here you can quickly post your property and compare your viewed properties with other users and you can directly interact with agent as well via our Chat.</string>
    <string name="share_your_experience_with_us">Share your experience with us. We would love to here from you.</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="msg_empty_share_experience">Please share your experience with us, We\'d love to hear from you.</string>
    <string name="msg_length_share_experience">Please enter 4 character of your experience with us, We\'d love to hear from you.</string>
    <string name="general">General</string>
    <string name="general_email">info@propare.com.au</string>
    <string name="marketing">Marketing</string>
    <string name="marketing_email">marketing@propare.com.au</string>
    <string name="technical_support">Technical Support</string>
    <string name="technical_support_email">support@propare.com.au</string>
    <string name="current_password">Current Password</string>
    <string name="current_email">Current Email</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="change_email">Change Email</string>
    <string name="number_0">0</string>
    <string name="msg_new_email_confirm_email_match">New email and confirm email does not match.</string>
    <string name="statistics">Statistics</string>
    <string name="buyer_statistics">Buyer Statistics</string>
    <string name="all">All</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="buyers">Buyers</string>
    <string name="propares">Propares</string>
    <string name="graph">Graph</string>
    <string name="tier_1">Tier 1</string>
    <string name="tier_2">Tier 2</string>
    <string name="tier_3">Tier 3</string>
    <string name="rating_score">Rating Score</string>
    <string name="zero_expectations">Zero\nExpectations</string>
    <string name="lower_than_expectations">Lower than\n expectations</string>
    <string name="meet_the_expectations">Meets\nexpectations</string>
    <string name="higher_than_expectations">Higher than\nExpectations</string>
    <string name="exceeds_the_expectations">Exceeds\nexpectations</string>
    <string name="dummy_date">21 Jul 2021</string>
    <string name="questions">Questions</string>
    <string name="question_1">Are you interested in this property?</string>
    <string name="question_2">Do you want the Agent to send you messages regarding this property?</string>
    <string name="question_3">Do you want to leave feedback on this property?</string>
    <string name="question_4">How would you like to be contacted?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="propare_messenger">Propare Messenger</string>
    <string name="hint_my_notes">Notes for your own reference. only you can see this.</string>
    <string name="my_notes">My notes</string>
    <string name="location">Location</string>
    <string name="zero">Zero</string>
    <string name="low">Low</string>
    <string name="meets">Meets</string>
    <string name="higher">Higher</string>
    <string name="exceeds_expectations">Exceeds Expectations</string>
    <string name="n_a">N/A</string>
    <string name="property_feedback">Property Feedback</string>
    <string name="property_status_for_sale">For Sale</string>
    <string name="property_status_auction">Auction</string>
    <string name="property_status_under_offer">Under Offer</string>
    <string name="property_status_under_contract">Under Contract</string>
    <string name="property_status_sold">Sold</string>
</resources>