<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:background="@color/white"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="gone">

        <com.rentalhomes.utils.customviews.BoldTextView
            android:id="@+id/tvQuestionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/questions"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Question 1-->
        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion1"
            style="@style/textView_black_201_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/question_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestionsTitle" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion1Yes"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion1" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion1No"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/no"
            app:layout_constraintStart_toEndOf="@id/tvQuestion1Yes"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion1" />

        <View
            android:id="@+id/vdUnderQuestion1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/grey_108"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion1Yes" />

        <!--Question 2-->
        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion2"
            style="@style/textView_black_201_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/question_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vdUnderQuestion1" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion2Yes"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion2" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion2No"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/no"
            app:layout_constraintStart_toEndOf="@id/tvQuestion2Yes"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion2" />

        <View
            android:id="@+id/vdUnderQuestion2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/grey_108"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion2Yes" />

        <!--Question 3-->
        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion3"
            style="@style/textView_black_201_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/question_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vdUnderQuestion2" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion3Yes"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion3" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion3No"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/no"
            app:layout_constraintStart_toEndOf="@id/tvQuestion3Yes"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etQue3Feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_white_curved_5"
            android:backgroundTint="@color/grey_109"
            android:gravity="top|start"
            android:hint="@string/property_feedback"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="3"
            android:maxLength="500"
            android:maxLines="3"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion3Yes" />

        <View
            android:id="@+id/vdUnderQuestion3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/grey_108"
            app:layout_constraintTop_toBottomOf="@id/etQue3Feedback" />

        <!--Question 4-->
        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion4"
            style="@style/textView_black_201_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/question_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vdUnderQuestion3" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion4Email"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion4" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion4Phone"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/phone"
            app:layout_constraintStart_toEndOf="@id/tvQuestion4Email"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion4" />

        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvQuestion4PropareMsg"
            style="@style/textView_yes_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_grey_outline_curved_10"
            android:text="@string/propare_messenger"
            app:layout_constraintStart_toEndOf="@id/tvQuestion4Phone"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion4" />

        <View
            android:id="@+id/vdUnderQuestion4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/grey_108"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion4Email" />

        <!--My notes-->
        <com.rentalhomes.utils.customviews.RegularTextView
            android:id="@+id/tvMyNotes"
            style="@style/textView_black_201_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/my_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vdUnderQuestion4" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMyNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/box_disable_curved_8"
            android:backgroundTint="@color/grey_109"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="top"
            android:hint="@string/hint_my_notes"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:maxLength="500"
            android:maxLines="5"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/tvMyNotes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveQue"
            style="@style/button_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/bg_app_theme_button"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etMyNotes" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>